--- a/app/views/application_details.erb
+++ b/app/views/application_details.erb
@@ -16,3 +16,6 @@
 <% @os_counts.each do |os, count| %>
 <p>Operating System: <%= os %> Count: <%= count %></p>
 <% end %>
+
+<h2>Response Time</h2>
+<p>Average Response Time: <%= @ave_response_time %> </p>
