--- a/app/views/url_statistics.erb
+++ b/app/views/url_statistics.erb
@@ -1,56 +1,56 @@
-<h1>Url Statistics</h1>
+<div class="container-fuid text-center">
+  <h1>Url Statistics</h1>
+</div>
+<div class="container text-center">
+  <h4>Longest Response Time</h4>
+  <%= @relevant_payloads.maximum(:responded_in) %>
+  <h4>Shortest Response Time</h4>
+  <%= @relevant_payloads.minimum(:responded_in) %>
+  <h4>Average Response Time</h4>
+  <%= @relevant_payloads.average(:responded_in).to_i %>
+</div>
 
-<h2>Longest Response Time</h2>
-<%= @relevant_payloads.maximum(:responded_in) %>
-
-<h2>Shortest Response Time</h2>
-<%= @relevant_payloads.minimum(:responded_in) %>
-
-<h2>Average Response Time</h2>
-<%= @relevant_payloads.average(:responded_in).to_i %>
-
-<h2>Verb Usage</h2>
-<% verbs = @relevant_payloads.group(:request_type).count.to_a %>
-<% verbs.each do |verb, count| %>
-<table>
-  <tr>
-    <th>Verb</th>
-    <th>Count</th>
-  </tr>
-  <tr>
-    <td> <%= verb %> </td>
-    <td> <%= count %> </td>
-  </tr>
-</table>
-<% end %>
-
-<h2>Most Popular Referrers</h2>
-<% referrers = @relevant_payloads.group(:referred_by).count.to_a %>
-<% referrers.each do |referrer, count| %>
-<table>
-  <tr>
-    <th>Referrer</th>
-    <th>Count</th>
-  </tr>
-  <tr>
-    <td> <%= referrer %> </td>
-    <td> <%= count %> </td>
-  </tr>
-</table>
-<% end %>
-
-
-<h2>Most Popual User Agents</h2>
-<% agents = @relevant_payloads.group(:user_agent).count.to_a %>
-<% ag = agents.each do |agent, count| %>
-<table>
-  <tr>
-    <th>Agent</th>
-    <th>Count</th>
-  </tr>
-  <tr>
-    <td> <%= UserAgent.parse(agent).platform %> </td>
-    <td> <%= count %> </td>
-  </tr>
-</table>
-<% end %>
+<div class="container-fluid col-md-4 text-center col-md-offset-4">
+  <h4>Verb Usage</h4>
+  <% verbs = @relevant_payloads.group(:request_type).count.to_a %>
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <th>Verb</th>
+      <th>Count</th>
+    </tr>
+  <% verbs.each do |verb, count| %>
+    <tr>
+      <td> <%= verb %> </td>
+      <td> <%= count %> </td>
+    </tr>
+  <% end %>
+  </table>
+  <h4>Most Popular Referrers</h4>
+  <% referrers = @relevant_payloads.group(:referred_by).count.to_a %>
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <th>Referrer</th>
+      <th>Count</th>
+    </tr>
+  <% referrers.each do |referrer, count| %>
+    <tr>
+      <td> <%= referrer %> </td>
+      <td> <%= count %> </td>
+    </tr>
+  <% end %>
+  </table>
+  <h4>Most Popual User Agents</h4>
+  <% agents = @relevant_payloads.group(:user_agent).count.to_a %>
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <th>Agent</th>
+      <th>Count</th>
+    </tr>
+  <% ag = agents.each do |agent, count| %>
+    <tr>
+      <td> <%= UserAgent.parse(agent).platform %> </td>
+      <td> <%= count %> </td>
+    </tr>
+  <% end %>
+  </table>
+</div>
