added link to error page

--- a/app/views/no_event_error.erb
+++ b/app/views/no_event_error.erb
@@ -4,4 +4,5 @@
 <div class="text-center white-text">
   <h1>Error Page</h1>
   <p>No Events with this name.</p>
+  <a href="http://localhost:9393/sources/<%= @source.identifier %>/events"><%= @source.identifier %> events index</a>
 </div>
